--- a/Daniel/Repast.settings
+++ b/Daniel/Repast.settings
@@ -12,6 +12,6 @@
     <string>SettingsRegistryId</string>
     <string>Repast.registry</string>
     <string>LastLoadedScenario</string>
-    <string>C:\Users\Daniel\Dropbox\code\code\repast-neural-network-agent-based-model\Daniel\neuralNetworkABM.rs</string>
+    <string>/home/dchen/code/repast-neural-network-agent-based-model/Daniel/neuralNetworkABM.rs</string>
   </hashtable>
 </simphony.settings.SettingsRegistry>
