--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,30 @@
-Daniel/bin/.gitignore
-Daniel/bin/
-Daniel/debug.log
-Daniel/Velocity.log*
-Daniel/bin/*
+./Daniel/bin/.gitignore
+./Daniel/bin
+./Daniel/debug.log
+./Daniel/Velocity.log*
+./Daniel/bin/*
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
