--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-/Daniel/bin/.gitignore
-./Daniel/bin/.gitignore
-./Daniel/bin
-./Daniel/debug.log
-./Daniel/Velocity.log*
-./Daniel/bin/*
+Daniel/bin/.gitignore
+Daniel/debug.log
+Daniel/Velocity.log*
+Daniel/bin/*
+Daniel/bin
 
 # Compiled source #
 ###################
