--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,5 @@
-/R/cache/__packages
-/R/cache/plot-output-1_9025dca96a4066c73cbc76836b887938.RData
-/R/cache/plot-output-1_9025dca96a4066c73cbc76836b887938.rdb
-/R/cache/plot-output-1_9025dca96a4066c73cbc76836b887938.rdx
-/R/cache/plot-output-1a_9b3d2fa3fbe504af4d28d3c054f97a58.RData
-/R/cache/plot-output-1a_9b3d2fa3fbe504af4d28d3c054f97a58.rdb
-/R/cache/plot-output-1a_9b3d2fa3fbe504af4d28d3c054f97a58.rdx
-/R/figure/plot-output-1.png
-/R/figure/plot-output-11.png
-/R/figure/plot-output-12.png
-/R/figure/plot-output-13.png
-/R/figure/plot-output-1a.png
-/R/figure/plot-sanity-1.png
-/R/figure/plot-sanity-2.png
-/R/figure/plot-sanity-3.png
-/R/figure/plot-sanity-4.png
-/R/figure/plot-sanity-5.png
+/R/cache/*
+/R/figure/*
 /R/latex-outputs.aux
 /R/latex-outputs.bbl
 /R/latex-outputs.pdf
@@ -52,3 +37,32 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# latex
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
+
+# R
+.Rhistory
+.Rdata
